--- a/log4j.properties
+++ b/log4j.properties
@@ -8,7 +8,7 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%d{ABSOLUTE} (%F:%L) %-5p - %m%n
 
 # API
-log4j.logger.com.oltpbenchmark=INFO
+log4j.logger.com.oltpbenchmark=DEBUG
 log4j.logger.com.oltpbenchmark.api=INFO
 
 # Benchmarks
@@ -16,7 +16,7 @@ log4j.logger.com.oltpbenchmark.benchmarks.tatp=INFO
 log4j.logger.com.oltpbenchmark.benchmarks.twitter=INFO
 log4j.logger.com.oltpbenchmark.benchmarks.wikipedia=INFO
 log4j.logger.com.oltpbenchmark.benchmarks.epinions=INFO
-log4j.logger.com.oltpbenchmark.benchmarks.ycsb=INFO
+log4j.logger.com.oltpbenchmark.benchmarks.ycsb=DEBUG
 log4j.logger.com.oltpbenchmark.benchmarks.seats=INFO
 log4j.logger.com.oltpbenchmark.benchmarks.linkbench=INFO
 log4j.logger.com.oltpbenchmark.benchmarks.sibench=INFO
@@ -36,7 +36,7 @@ log4j.logger.com.oltpbenchmark.benchmarks.wikipedia.WikipediaLoader=INFO
 !==============================================================================
 
 ! turn on the internal log4j debugging flag so we can see what it is doing
-#log4j.debug=true
+log4j.debug=true
 
 !==============================================================================
 ! JDBC API layer call logging :
